--- a/main.html
+++ b/main.html
@@ -12,8 +12,7 @@
 		time taken by a program to run and 
 		complete the given task. For example, if a program takes 100 seconds to run while another program completes the same task in 200 seconds, then clearly the first program has low time complexity. Therefore, as a programmer, your goal is to reduce the time complexity of the code 
 		by optimizing it and making it more efficient.</p>
-	<h2>Space Complexity: </h2>
-	<span><p>Space complexity is related to the amount of memory 
+	<p><span><b>Space Complexity:</b></span> Space complexity is related to the amount of memory 
 		occupied by a program. In simple terms, any program’s
 		space complexity is calculated by the total amount of
 		space it occupies in the computer’s memory. So when we
